--- a/.github/workflows/dash.yml
+++ b/.github/workflows/dash.yml
@@ -31,7 +31,7 @@ jobs:
             - type: 'table'
               title: 'New Pull Requests (This Week)'
               issue_query: 'repo:libgit2/libgit2 is:open is:issue created:>{{ date("-7 days") }} sort:created-asc'
-        token: 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
+        token: ${{ github.token }}
 
     - name: Publish Documentation
       run: |
