--- a/.github/workflows/dash.yml
+++ b/.github/workflows/dash.yml
@@ -1,9 +1,8 @@
 name: Build Dashboard
 
-on:
-  schedule:
-  - cron: 0 * * * *
+
   workflow_dispatch:
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,7 +29,7 @@ jobs:
             widgets:
             - type: 'table'
               title: 'New Pull Requests (This Week)'
-              issue_query: 'repo:libgit2/libgit2 is:open is:issue created:>{{ date("-7 days") }} sort:created-asc'
+              issue_query: 'repo:portainer/portainer-docs is:open is:issue created:>{{ date("-7 days") }} sort:created-asc'
         token: ${{ github.token }}
 
     - name: Publish Documentation
