--- a/.github/workflows/dash.yml
+++ b/.github/workflows/dash.yml
@@ -25,11 +25,54 @@ jobs:
             format: html
             filename: 'out/dashboard.html'
           sections:
-          - title: 'Pull Requests'
+          - title: 'Open Issues by Type'
+            description: 'Queries of issues by type, using their label.'
             widgets:
-            - type: 'table'
-              title: 'New Pull Requests (This Week)'
-              issue_query: 'repo:portainer/portainer-docs is:open is:issue created:>{{ date("-7 days") }} sort:created-asc'
+            - type: 'number'
+              title: 'Bug'
+              issue_query: 'repo:portainer/portainer is:open is:issue label:"kind/bug"'
+              color: 'red'
+            - type: 'number'
+              title: 'Feature'
+              issue_query: 'repo:portainer/portainer  is:open is:issue label:"kind/enhancement"'
+              color: 'green'
+            - type: 'number'
+              title: 'Up for Grabs'
+              issue_query: 'repo:portainer/portainer  is:open is:issue label:"bug/need-confirmation"'
+              color: 'blue'
+            - type: 'number'
+              title: 'Easy Fix'
+              issue_query: 'repo:portainer/portainer  is:open is:issue label:"bug/unable-to-reproduce"'
+              color: 'purple'
+            - type: 'number'
+              title: 'Easy Fix'
+              issue_query: 'repo:portainer/portainer  is:open is:issue label:"kind/question"'
+              color: 'cyan'
+          - title: 'Open Issues by Age'
+            description: 'Queries of open issues by their creation date.'
+            widgets:
+            - type: 'graph'
+              title: 'Age'
+              elements:
+              - title: '7 days'
+                issue_query: 'repo:portainer/portainer is:open is:issue created:>{{ date("-7 days") }}'
+                color: 'green'
+              - title: '30 days'
+                issue_query: 'repo:portainer/portainer is:open is:issue created:{{ date("-30 days") }}..{{ date("-7 days") }}'
+                color: 'blue'
+              - title: '90 days'
+                issue_query: 'repo:portainer/portainer is:open is:issue created:{{ date("-90 days") }}..{{ date("-30 days") }}'
+              - title: '1 year'
+                issue_query: 'repo:portainer/portainer is:open is:issue created:{{ date("-1 year") }}..{{ date("-90 days") }}'
+              - title: '2 years'
+                issue_query: 'repo:portainer/portainer is:open is:issue created:{{ date("-2 years") }}..{{ date("-1 year") }}'
+                color: 'red'
+              - title: '3 years'
+                issue_query: 'repo:portainer/portainer is:open is:issue created:{{ date("-3 years") }}..{{ date("-2 years") }}'
+                color: 'red'
+              - title: '>3 years'
+                issue_query: 'repo:portainer/portainer is:open is:issue created:<{{ date("-365 days") }}'
+                color: 'red'
         token: ${{ github.token }}
 
     - name: Publish Documentation
