--- a/.github/workflows/dash.yml
+++ b/.github/workflows/dash.yml
@@ -43,11 +43,11 @@ jobs:
             - type: 'number'
               title: 'Easy Fix'
               issue_query: 'repo:portainer/portainer  is:open is:issue label:"bug/unable-to-reproduce"'
-              color: 'purple'
+              color: 'black'
             - type: 'number'
               title: 'Easy Fix'
               issue_query: 'repo:portainer/portainer  is:open is:issue label:"kind/question"'
-              color: 'cyan'
+              color: 'yellow'
           - title: 'Open Issues by Age'
             description: 'Queries of open issues by their creation date.'
             widgets:
