--- a/.github/workflows/dash.yml
+++ b/.github/workflows/dash.yml
@@ -74,7 +74,11 @@ jobs:
                 issue_query: 'repo:portainer/portainer is:open is:issue created:<{{ date("-365 days") }}'
                 color: 'red'
         token: ${{ github.token }}
-
+    - name: Find and Replace css and js
+      run: |
+        sed -i -e 's@dashboard.css@/dashboard.css@g' dashboard.html
+        sed -i -e 's@dashboard.js@/dashboard.js@g' dashboard.html
+        
     - name: Publish Documentation
       run: |
         git add .
