--- a/.github/workflows/dash.yml
+++ b/.github/workflows/dash.yml
@@ -33,11 +33,11 @@ jobs:
             - type: 'number'
               title: 'Bug'
               issue_query: 'repo:portainer/portainer is:open is:issue label:"kind/bug"'
-              color: 'red'
+              color: 'blue'
             - type: 'number'
               title: 'Enhancement'
               issue_query: 'repo:portainer/portainer  is:open is:issue label:"kind/enhancement"'
-              color: 'green'
+              color: 'blue'
             - type: 'number'
               title: 'Bug - Need Confirmation'
               issue_query: 'repo:portainer/portainer  is:open is:issue label:"bug/need-confirmation"'
