--- a/.github/workflows/dash.yml
+++ b/.github/workflows/dash.yml
@@ -50,6 +50,27 @@ jobs:
               title: 'Question'
               issue_query: 'repo:portainer/portainer  is:open is:issue label:"kind/question"'
               color: 'yellow'
+          - title: 'Recently Closed'
+            widgets:
+            - type: 'number'
+              title: 'Closed in the last week'
+              issue_query: 'repo:portainer/portainer state:closed is:issue updated:>{{ date("-7 days") }}'
+              color: 'green'
+          
+          - title: 'Recently Logged'
+            widgets:
+            - type: 'number'
+              title: 'Bug'
+              issue_query: 'repo:portainer/portainer is:open is:issue created:>{{ date("-7 days") }} -label:"kind/bug"'
+              color: 'blue'
+            - type: 'number'
+              title: 'Feature Requests'
+              issue_query: 'repo:portainer/portainer is:open is:issue created:>{{ date("-7 days") }} label:"kind/enhancement"'
+              color: 'blue'
+            - type: 'table'
+              title: 'All open issues logged in last 7 days'
+              issue_query: 'repo:portainer/portainer is:issue is:open created:>{{ date("-7 days") }}'
+              
           - title: 'Open Issues by Age'
             description: 'Queries of open issues by their creation date.'
             widgets:
@@ -75,30 +96,6 @@ jobs:
               - title: '>3 years'
                 issue_query: 'repo:portainer/portainer is:open is:issue created:<{{ date("-365 days") }}'
                 color: 'red'
-          - title: 'Pull Requests'
-            widgets:
-            - type: 'number'
-              title: 'Changes Requested'
-              issue_query: 'repo:portainer/portainer is:open is:pr review:changes_requested'
-              color: 'green'
-            - type: 'number'
-              title: 'Needs Review'
-              issue_query: 'repo:portainer/portainer is:open is:pr review:none'
-              color: 'red'
-            - type: 'table'
-              title: 'Pull Requests with Changes Requested'
-              issue_query: 'repo:portainer/portainer is:open is:pr review:changes_requested sort:created-asc'
-            - type: 'table'
-              title: 'Oldest Pull Requests without Review'
-              fields:
-              - title: 'Issue'
-                property: 'number'
-              - title: 'Date'
-                value: '{{ date(item.created_date) }}'
-              - title: 'Title'
-                property: 'title'
-              issue_query: 'repo:portainer/portainer is:open is:pr review:none sort:created-asc'
-              limit: 15
         token: ${{ github.token }}
     - name: Find and Replace css and js
       run: |
