--- a/.github/workflows/dash.yml
+++ b/.github/workflows/dash.yml
@@ -70,6 +70,7 @@ jobs:
             - type: 'table'
               title: 'All open issues logged in last 7 days'
               issue_query: 'repo:portainer/portainer is:issue is:open created:>{{ date("-7 days") }}'
+              color: 'blue'
               
           - title: 'Open Issues by Age'
             description: 'Queries of open issues by their creation date.'
