--- a/.github/workflows/dash.yml
+++ b/.github/workflows/dash.yml
@@ -61,11 +61,15 @@ jobs:
             widgets:
             - type: 'number'
               title: 'Bug'
-              issue_query: 'repo:portainer/portainer is:open is:issue created:>{{ date("-7 days") }} -label:"kind/bug"'
+              issue_query: 'repo:portainer/portainer is:open is:issue created:>{{ date("-7 days") }} label:"kind/bug"'
               color: 'blue'
             - type: 'number'
               title: 'Feature Requests'
               issue_query: 'repo:portainer/portainer is:open is:issue created:>{{ date("-7 days") }} label:"kind/enhancement"'
+              color: 'blue'
+            - type: 'number'
+              title: 'Other'
+              issue_query: 'repo:portainer/portainer is:open is:issue created:>{{ date("-7 days") }} -label:"kind/bug" -label:"kind/enhancement"'
               color: 'blue'
             - type: 'table'
               title: 'All open issues logged in last 7 days'
