--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,11 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Traefik Community Support
-    url: https://community.traefik.io/
-    about: If you have a question, or are looking for advice, please post on our Discuss forum! The community loves to chime in to help. Happy Coding!
-  - name: Traefik Helm Chart Issues
-    url: https://github.com/traefik/traefik-helm-chart
-    about: Are you submitting an issue or feature enhancement for the Traefik helm chart? Please post in the traefik-helm-chart GitHub Issues.
+  - name: Getting Started with Portainer?
+    url: https://documentation.portainer.io/quickstart/
+    about: Checkout our quickstart guide..
+  - name: Portainer Community Support
+    url: https://community.portainer.io/about-the-community
+    about: Have a question about Portainer CE? Find all the usual community channels here..
+  - name: Portainer Business Support
+    url: https://support.portainer.io/?login=1
+    about: Have a question about Portainer Business? Contact our Support Specialist..
