--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -6,6 +6,6 @@ contact_links:
   - name: Portainer Community Support
     url: https://community.portainer.io/about-the-community
     about: Have a question about Portainer CE? Find all the usual community channels here..
-  - name: Portainer Business Support
-    url: https://support.portainer.io/?login=1
-    about: Have a question about Portainer Business? Contact our Support Specialist..
+  - name: Portainer Business
+    url: https://www.portainer.io/portainerbusiness 
+    about: Need enterprise grade support? Check out Portainer Business..
