--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -8,4 +8,4 @@ contact_links:
     about: Have a question about Portainer CE? Find all the usual community channels here..
   - name: Portainer Business
     url: https://www.portainer.io/portainerbusiness 
-    about: Need enterprise grade support? Check out Portainer Business..
+    about: Need Enterprise functionality and support? Check out Portainer Business..
