--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -7,7 +7,8 @@ on:
         description: 'username'
         required: true
         default: 'samdulam'
-
+env:
+  GH_EMAIL_TOKEN=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
 jobs:
   Run-npm-on-Ubuntu:
     name: Run npm on Ubuntu
