--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -9,14 +9,29 @@ on:
         default: 'samdulam'
 env:
   GH_EMAIL_TOKEN: ${{ secrets.GH_EMAIL_TOKEN }}
-jobs:
-  Run-npm-on-Ubuntu:
-    name: Run npm on Ubuntu
+
+  # Run-npm-on-Ubuntu:
+  #   name: Run npm on Ubuntu
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: '14'
+  #     - run: |
+  #         sudo npm install --global github-email
+  #         echo "email = $(github-email ${{ github.event.inputs.gh_username }})"
+  jobs:
+  get_user_email:
     runs-on: ubuntu-latest
+    name: A job to get a users email
     steps:
-      - uses: actions/setup-node@v3
+      - name: get email
+        id: test
+        uses: evvanErb/get-github-email-by-username-action@v1.25
         with:
-          node-version: '14'
-      - run: |
-          sudo npm install --global github-email
-          echo "email = $(github-email ${{ github.event.inputs.gh_username }})"
+          github-username: 'samdulam' # This is the input username
+          token: ${{ secrets.GH_EMAIL_TOKEN }} # This is an optional input of a PAT to use a more reliable way to get a user's email
+          
+      # Use the output from the `test` step
+      - name: Print the found email
+        run: echo "The email is ${{ steps.test.outputs.email }}" # Example of how to access output email
