--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -30,7 +30,7 @@ jobs:
         uses: evvanErb/get-github-email-by-username-action@v2.0
         with:
           github-username: ${{ github.event.inputs.gh_username }} # This is the input username
-          token:  ${{ env.GH_EMAIL_TOKEN }} # This is an optional input of a PAT to use a more reliable way to get a user's email
+          # token:  ${{ env.GH_EMAIL_TOKEN }} # This is an optional input of a PAT to use a more reliable way to get a user's email
           
       # Use the output from the `test` step
       - name: Print the found email
