--- a/.github/workflows/notify_slack.yml
+++ b/.github/workflows/notify_slack.yml
@@ -31,5 +31,6 @@ jobs:
       id: slack
       uses: slackapi/slack-github-action@v1.24.0
       with:
-        payload-file-path: "./example.json"
+        payload-file-path: "./payload.json"
+        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
