--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -84,7 +84,7 @@ body:
 
   - type: input
     attributes:
-      label: Portainer Version?
+      label: Portainer Version Input?
       description: |
         Enter a valid version (eg: 2.18.4)
         We only provide support for most recent version and previous 3
