--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -112,7 +112,7 @@ body:
     validations:
       required: true
 
-  - type: textarea
+  - type: input
     attributes:
       label: Browser?
       description: Provide the browser and version details.
@@ -125,5 +125,12 @@ body:
       label: Command used to deploy Portainer?
       description: Provide the command or compose used to deploy Portainer.
       placeholder: `docker run -p 9443:9443 portainer/portainer`
+    validations:
+      required: false
+
+  - type: textarea
+    attributes:
+      label: Additional Info?
+      description: Any additional info or workarounds that may help
     validations:
       required: false
