--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -48,6 +48,13 @@ body:
 
   - type: textarea
     attributes:
+      label: logs and screenshots?
+      placeholder: Provide Portainer container logs or any screenshots pertaining to the issue
+    validations:
+      required: false
+
+  - type: textarea
+    attributes:
       label: Steps to Reproduce?
       placeholder: |
         1. Go to '...'
