--- a/.github/DISCUSSION_TEMPLATE/ideas.yaml
+++ b/.github/DISCUSSION_TEMPLATE/ideas.yaml
@@ -1,4 +1,14 @@
+name: Ideas / Feature Request
 body:
+  - type: textarea
+    attributes:
+      label: Welcome!
+      description: |
+        The issue tracker is for reporting bugs. For feature requests and other questions please use [discussions](https://github.com/samdulam/dashy/discussions)
+        Link to community slack perhaps
+        
+        DO NOT FILE DUPLICATE REQUESTS.
+
   - type: textarea
     attributes:
       label: Goals
