--- a/.github/DISCUSSION_TEMPLATE/help.yaml
+++ b/.github/DISCUSSION_TEMPLATE/help.yaml
@@ -7,4 +7,9 @@ body:
         Also, be sure to check our [Knowledge Base](https://portal.portainer.io/knowledge) and [documentatio](https://documentation.portainer.io/) first.
         
         **DO NOT FILE DUPLICATE REQUESTS.**
-        
+
+  - type: textarea
+    attributes:
+      label: Ask a Question!
+    validations:
+      required: true
