--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,54 +1,64 @@
 name: Bug Report
 description: Create a report to help us improve.
+labels: kind/bug,bug/need-confirmation
 body:
   - type: checkboxes
     id: terms
     attributes:
       label: Welcome!
       description: |
-        The issue tracker is for reporting bugs. For feature requests and other questions please use [discussions](https://github.com/samdulam/dashy/discussions)
-        Link to community slack perhaps
+        The issue tracker is for reporting bugs. If you have an [idea for a new feature](https://github.com/samdulam/dashy/discussions/categories/ideas) or a [general question about Portainer](https://github.com/samdulam/dashy/discussions/categories/help) please post in our [GitHub Discussions](https://github.com/samdulam/dashy/discussions).
+        
+        You can also ask for help in our [community Slack channel](https://join.slack.com/t/portainer/shared_invite/zt-txh3ljab-52QHTyjCqbe5RibC2lcjKA).
         
         DO NOT FILE ISSUES FOR GENERAL SUPPORT QUESTIONS.
       options:
         - label: Yes, I've searched similar issues on [GitHub](https://github.com/portainer/poartainer/issues).
           required: true
-        - label: Yes, I've checked [documentation](https://docs.portainer.io) and [Knowledge Base](https://portal.portainer.io/knowledge).
+        - label: Yes, I've checked whether this issue is covered in the Portainer [documentation](https://docs.portainer.io) or [knowledge base](https://portal.portainer.io/knowledge).
           required: true
 
-  - type: textarea
+  - type: markdown
     attributes:
-      label: Problem Description?
-      description: |
-        How to write a good bug report?
+      value: |
+        **About your issue**
+
+        Tell us a bit about the issue you're having.
+
+        How to write a good bug report:
 
         - Respect the issue template as much as possible.
         - The title should be short and descriptive.
         - Explain the conditions which led you to report this issue: the context.
         - The context should lead to something, an idea or a problem that you're facing.
         - Remain clear and concise.
-        - Format your messages to help the reader focus on what matters and understand the structure of your message, use [Markdown syntax](https://help.github.com/articles/github-flavored-markdown)
-      placeholder: A clear and concise description of what the bug is...
+        - Format your messages to help the reader focus on what matters and understand the structure of your message, use [Markdown syntax](https://help.github.com/articles/github-flavored-markdown).
+
+  - type: textarea
+    attributes:
+      label: Problem Description
+      description: A clear and concise description of what the bug is. 
     validations:
       required: true
 
   - type: textarea
     attributes:
-      label: Expected Behaviour
-      placeholder: A clear and concise description of what you expected to happen...
+      label: Expected Behavior
+      description: A clear and concise description of what you expected to happen.
     validations:
       required: true
 
   - type: textarea
     attributes:
-      label: Actual Behaviour?
-      placeholder: A clear and concise description of what actually happens...
+      label: Actual Behavior
+      description: A clear and concise description of what actually happens.
     validations:
       required: true
 
   - type: textarea
     attributes:
-      label: Steps to Reproduce?
+      label: Steps to Reproduce
+      description: Please be as detailed as possible when providing steps to reproduce.
       placeholder: |
         1. Go to '...'
         2. Click on '....'
@@ -59,24 +69,22 @@ body:
 
   - type: textarea
     attributes:
-      label: logs and screenshots?
-      placeholder: Provide Portainer container logs or any screenshots pertaining to the issue
+      label: Portainer logs or screenshots
+      placeholder: Provide Portainer container logs or any screenshots related to the issue.
     validations:
       required: false
 
-  - type: dropdown
+  - type: markdown
     attributes:
-      label: Portainer Edition?
-      multiple: false
-      options:
-        - 'Business Edition (BE/EE)'
-        - 'Community Edition (CE)'
-    validations:
-      required: true
+      value: |
+        **About your environment**
+
+        Tell us a bit about your Portainer environment.
 
   - type: dropdown
     attributes:
-      label: Portainer Version?
+      label: Portainer version
+      description: We only provide support for the most recent version of Portainer and the previous 3 versions. If you are on an older version of Portainer we recommend upgrading first in case your bug has already been fixed.
       multiple: false
       options:
         - '2.18.4'
@@ -91,53 +99,63 @@ body:
 
   - type: input
     attributes:
-      label: Portainer Version [Alt]?
+      label: Enter your Portainer version
       description: |
         Enter a valid version (eg: 2.18.4)
-        We only provide support for most recent version and previous 3
+        We only provide support for the most recent version of Portainer and the previous 3 versions. If you are on an older version of Portainer we recommend upgrading first in case your bug has already been fixed.
       placeholder: 2.18.4
+    validations:
+      required: false
+
+  - type: dropdown
+    attributes:
+      label: Portainer Edition
+      multiple: false
+      options:
+        - 'Business Edition (BE/EE)'
+        - 'Community Edition (CE)'
     validations:
       required: true
 
   - type: input
     attributes:
-      label: Platform and Version?
+      label: Platform and Version
       description: |
-        Enter a the container management platform (Docker | Swarm | Kubernetes along with version)
-        Eg: Docker 24.0.3 | DOcker Swarm 24.0.3 | Kubernetes 1.26
+        Enter your container management platform (Docker | Swarm | Kubernetes) along with the version. You can find our supported platforms [in our documentation](https://docs.portainer.io/start/requirements-and-prerequisites).
+        Example: Docker 24.0.3 | DOcker Swarm 24.0.3 | Kubernetes 1.26
       placeholder: Docker 24.0.3
     validations:
       required: true
 
   - type: input
     attributes:
-      label: OS and Architecture?
+      label: OS and Architecture
       description: |
-        Enter the Operating System, Version and Architecture 
-        Eg: Ubuntu 22.04, amd64 | Rasbian arm64
-      placeholder: Ubuntu 22.04, amd64
+        Enter the Operating System, Version and Architecture.
+        Example: Ubuntu 22.04, AMD64 | Raspbian OS, ARM64
+      placeholder: Ubuntu 22.04, AMD64
     validations:
       required: true
 
   - type: input
     attributes:
-      label: Browser?
-      description: Provide the browser and version details.
-      placeholder: Chrome 114 | Edge 114
+      label: Browser
+      description: Enter your browser and version.
+      placeholder: Google Chrome 114.0
     validations:
       required: false
 
   - type: textarea
     attributes:
-      label: Command used to deploy Portainer?
-      description: Provide the command or compose used to deploy Portainer.
+      label: What command did you use to deploy Portainer?
+      description: If you deployed Portainer using a compose file or manifest you can provide this here as well.
       placeholder: docker run -p 9443:9443 portainer/portainer
     validations:
       required: false
 
   - type: textarea
     attributes:
-      label: Additional Info?
-      description: Any additional info or workarounds that may help
+      label: Additional Information
+      description: Any additional information about your environment, the bug, or anything else you think might be helpful.
     validations:
       required: false
