--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -107,7 +107,7 @@ body:
     attributes:
       label: Enter your Portainer version
       description: |
-        Enter a valid version (eg: 2.18.4)
+        Enter a valid Portainer version. Example: 2.18.4
         We only provide support for the most recent version of Portainer and the previous 3 versions. If you are on an older version of Portainer we recommend upgrading first in case your bug has already been fixed.
     validations:
       required: false
@@ -126,26 +126,22 @@ body:
     attributes:
       label: Platform and Version
       description: |
-        Enter your container management platform (Docker | Swarm | Kubernetes) along with the version. You can find our supported platforms [in our documentation](https://docs.portainer.io/start/requirements-and-prerequisites).
-        Example: Docker 24.0.3 | DOcker Swarm 24.0.3 | Kubernetes 1.26
+        Enter your container management platform (Docker | Swarm | Kubernetes) along with the version. Example: Docker 24.0.3 | Docker Swarm 24.0.3 | Kubernetes 1.26
+        You can find our supported platforms [in our documentation](https://docs.portainer.io/start/requirements-and-prerequisites).
     validations:
       required: true
 
   - type: input
     attributes:
       label: OS and Architecture
-      description: |
-        Enter the Operating System, Version and Architecture.
-        Example: Ubuntu 22.04, AMD64 | Raspbian OS, ARM64
+      description: Enter your Operating System, Version and Architecture. Example: Ubuntu 22.04, AMD64 | Raspbian OS, ARM64
     validations:
       required: true
 
   - type: input
     attributes:
       label: Browser
-      description: |
-        Enter your browser and version.
-        Example: Google Chrome 114.0
+      description: Enter your browser and version. Example: Google Chrome 114.0
     validations:
       required: false
 
@@ -153,8 +149,8 @@ body:
     attributes:
       label: What command did you use to deploy Portainer?
       description: |
-        If you deployed Portainer using a compose file or manifest you can provide this here as well.
         Example: docker run -p 9443:9443 portainer/portainer
+        If you deployed Portainer using a compose file or manifest you can provide this here as well.
     validations:
       required: false
 
